--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
 		"prettier": "^3.2.5",
 		"prettier-eslint": "^16.3.0",
 		"typescript": "^5.3.3"
+	},
+	"dependencies": {
+		"chalk": "^5.3.0"
 	}
 }
